--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "body-parser": "^1.17.2",
         "cors": "^2.8.4",
         "express": "^4.15.4",
+        "forest-express-mongoose": "^1.1.14",
         "mongoose": "^4.11.6",
         "mongoose-paginate": "^5.0.3",
         "nconf": "^0.8.4"
