--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "mongoose": "^4.11.6",
         "mongoose-paginate": "^5.0.3",
         "nconf": "^0.8.4"
+    },
+    "engines": {
+        "node": "6.11.0"
     }
 }
